Add validation toggle on contributions in Admin

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -24,9 +24,8 @@ AFUP\HaphpyBirthdayBundle\Entity\Contribution:
         creditWanted:
             type:   boolean
             column: credit_wanted
-        moderationState:
+        accepted:
             type:   boolean
-            column: moderation_state
             nullable: true
         createdAt:
             type:   datetime
