--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -33,6 +33,7 @@ twig:
         limit_date:      "%limit_date%"
         premiere_date:   "%premiere_date%"
         warning_message: %warning_message%
+        twitter_account: %twitter_account%
         ga_ua: "%ga_ua%"
 
 # Assetic Configuration
