Add PHP-WVL to the list

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -179,3 +179,14 @@ zgphp:
     twitter:        zgphp
     country:        Croatia
     city:           Zagreb
+
+
+phpwvl:
+    displayed_name: PHP-WVL
+    full_name:      PHP West-Vlaanderen
+    parent:         ~
+    picture:        phpwvl.png
+    website:        http://php-wvl.be
+    twitter:        phpwvl
+    country:        BE
+    city:           Roeselare
