--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -179,3 +179,13 @@ zgphp:
     twitter:        zgphp
     country:        Croatia
     city:           Zagreb
+
+comphppuebla:
+    displayed_name: PHP Puebla
+    full_name:      PHP Puebla User Group
+    parent:
+    picture:        comphppuebla.svg
+    website:        http://www.comunidadphppuebla.com/
+    twitter:        ComPHPPuebla
+    country:        México
+    city:           Puebla
