Change PHP Puebla logo to png

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -194,7 +194,7 @@ comphppuebla:
     displayed_name: PHP Puebla
     full_name:      PHP Puebla User Group
     parent:
-    picture:        comphppuebla.svg
+    picture:        php-puebla.png
     website:        http://www.comunidadphppuebla.com/
     twitter:        ComPHPPuebla
     country:        México
