Update afup luxembourg logo

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -24,7 +24,7 @@ afup_luxembourg:
     displayed_name: afup Luxembourg
     full_name:      afup Luxembourg (Luxembourg PHP Users Group)
     parent:         afup
-    picture:        afup.svg
+    picture:        afup-luxembourg.svg
     website:        http://luxembourg.afup.org/
     twitter:        afup_luxembourg
     country:        Luxembourg
