Fix reference to PHPers logo in PUGs yml

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -294,7 +294,7 @@ phpers:
     displayed_name: PHPers
     full_name:      PHPers
     parent:
-    picture:        phpers.jpg
+    picture:        phpers.png
     website:        http://phpers.pl/
     twitter:        PHPersPL
     country:        Poland
