[UG] PHPMinds logo and yml file info.

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -329,3 +329,13 @@ phpwarks:
     twitter:        phpwarks
     country:        UK
     city:           Warwickshire
+
+phpminds:
+    displayed_name: PHP Minds
+    full_name:      PHP Minds
+    parent:
+    picture:        phpminds.svg
+    website:        http://phpminds.org
+    twitter:        phpminds
+    country:        UK
+    city:           Nottingham
