Add new PHP Limburg BE logo

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -144,7 +144,7 @@ php.limburg.be:
     displayed_name: PHP Limburg BE
     full_name:      PHP Limburg BE
     parent:         ~
-    picture:        phplimbe.jgp
+    picture:        phplimbe.svg
     website:        http://www.meetup.com/PHP-Limburg-BE/
     twitter:        phplimbe
     country:        Belgium
