Added PHP UG Munich

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -349,3 +349,13 @@ phpminds:
     twitter:        phpminds
     country:        UK
     city:           Nottingham
+
+phpugmunich:
+    displayed_name: PHP UG Munich
+    full_name:      PHP User Group Munich
+    parent:
+    picture:        phpugmunich.jpg
+    website:        http://www.meetup.com/phpugmunich/
+    twitter:        phpugmunich
+    country:        Germany
+    city:           München
