Added PHP Auckland

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -369,3 +369,13 @@ phpugmunich:
     twitter:        phpugmunich
     country:        Germany
     city:           München
+
+phpakl:
+   displayed_name: PHP Auckland
+   full_name:      The Auckland PHP Meetup Group
+   parent:
+   picture:        phpakl.png
+   website:        http://www.meetup.com/php-auckland/
+   twitter:        phpakl
+   country:        New Zealand
+   city:           Auckland
