--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -414,7 +414,7 @@ phpsrbija:
    displayed_name: PHP Srbija
    full_name:      PHP Srbija
    parent:
-   picture:        phpugdd.png
+   picture:        phpsrbija.png
    website:        http://phpsrbija.rs/
    twitter:        phpsrbija
    country:        Serbia
